# unimatch

./: .gitignore  README.md  setup.cfg  setup.py
datascripts/: merge_data.py  merge_splitting_data.py
datascripts/color/: color_restricted_montecarlo.py  color_unified_weighted_montecarlo.py
datascripts/splitting/color/: initialise_splits.py  splitting_restricted.py  splitting_unified.py
datascripts/splitting/toric/: initialise_splits.py
datascripts/toric/: toric_restricted_montecarlo.py  toric_unified_weighted_montecarlo.py
jobscripts/: qsub_color_restricted.sh  qsub_color_unified_weighted.sh  qsub_initial_splits.sh  qsub_split_restricted.sh  qsub_toric_restricted.sh  qsub_toric_unified_weighted.sh
paperdata/: plot_paper_thresholds.py  plot_splitting_data.py
paperdata/data/color-mc/: color_restricted.csv  color_unified.csv
paperdata/data/color-splitting/: color_restricted.csv  color_unified.csv
paperdata/data/toric-mc/: toric_restricted.csv  toric_unified_config_c_data.csv  toric_unified_threshold_B_1.1.csv
paperdata/data/toric-splitting/: toric_restricted.csv  toric_unified.csv
src/unimatch/: __init__.py
src/unimatch/codes/: __init__.py  model.py  paulitools.py
src/unimatch/codes/color/: __init__.py  _color488code.py  _color488pauli.py
src/unimatch/codes/generic/: __init__.py  _simpleerrormodel.py
src/unimatch/decoders/: __init__.py  decodertools.py  unifiedColor488Decoder.py
src/unimatch/splitting/: .new_splittingtools.py.swp  .splittingtools.py.swp  new_splittingtools.py  splittingtools.py  toricsplittingtools.py
