[metadata]
name = unimatch
version = attr: unimatch.__version__
author = Asmae Benhemou
author_email = asmae.benhemou.19@gmail.com
description = Color code matching-based decoding simulator
long_description = file:README.rst
long_description_content_type = text/x-rst
# url = ADD 

[options]
python_requires = >= 3.5
package_dir = = src
install_requires =
    numpy>=1.17
    scipy>=1.3
